<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/container_detail_team"
    tools:context=".view.ui.DetailTeamActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:titleEnabled="false">

            <ImageView
                android:id="@+id/img_banner_team_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/banner"
                android:contentDescription="@string/image_banner"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_detail_team"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:padding="@dimen/padding"
                app:cardCornerRadius="12dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/img_team_badge_detail"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:contentDescription="@string/image_badge"
                        android:src="@drawable/team_badge"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                    <TextView
                        android:id="@+id/txt_team_name_detail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:textColor="@android:color/black"
                        android:text="@string/team_name"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:gravity="center_horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/img_team_badge_detail"
                        app:layout_constraintTop_toTopOf="@id/img_team_badge_detail" />

                    <TextView
                        android:id="@+id/txt_team_stadium"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:layout_marginTop="@dimen/padding"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        android:textColor="@android:color/black"
                        android:gravity="center_horizontal"
                        android:text="@string/stadium_name"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/img_team_badge_detail"
                        app:layout_constraintTop_toBottomOf="@id/txt_team_name_detail" />
                    <TextView
                        android:id="@+id/txt_league_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:layout_marginTop="@dimen/padding"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:textColor="@android:color/black"
                        android:text="@string/league_name"
                        android:gravity="center_horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/img_team_badge_detail"
                        app:layout_constraintTop_toBottomOf="@id/txt_team_stadium"
                        app:layout_constraintBottom_toBottomOf="@id/img_team_badge_detail"/>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_detail_team"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="top"
                android:layout_marginBottom="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout_detail_team"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="bottom"
                app:tabIndicatorColor="@android:color/white"
                app:tabSelectedTextColor="@android:color/white"
                app:tabTextColor="@android:color/white" />

            <ProgressBar
                android:id="@+id/progress_bar_detail_team"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/activity_vertical_margin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>
    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager_detail_team"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>